# ioqml

./: CMakeLists.txt  INSTALL.md  README.md  default.nix  flake.nix  iofunctions.cpp  main.cpp
examples/: pass-prompt.qml
