cmake_minimum_required(VERSION 3.16)
project(ioqml VERSION 1.0 LANGUAGES C CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

# Set up AUTOMOC and some sensible defaults for runtime execution
# When using Qt 6.3, you can replace the code block below with
# qt_standard_project_setup()
set(CMAKE_AUTOMOC ON)
include(GNUInstallDirs)

find_package(QT NAMES Qt5 Qt6 REQUIRED COMPONENTS Core)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Gui Qml Quick)

qt_add_executable(ioqml WIN32 MACOSX_BUNDLE
    iofunctions.cpp iofunctions.h
    main.cpp
    pipereader.cpp pipereader.h
)
qt_add_qml_module(ioqml
    URI com.andreimikhailov.ioqml
    VERSION ${PROJECT_VERSION}
)

# Avoid collision between executable name and QML module directory (QTBUG-98568).
if(NOT WIN32 AND NOT APPLE)
    set_property(TARGET ioqml PROPERTY OUTPUT_NAME ioqml)
endif()

target_compile_definitions(ioqml PRIVATE
    QT_DEPRECATED_WARNINGS
)

target_link_libraries(ioqml PRIVATE
    Qt::Core
    Qt::Gui
    Qt::Qml
    Qt::Quick
)


# Resources:
set(qml_resource_files
    "qtquickcontrols2.conf"
)

qt_add_resources(ioqml "qml"
    PREFIX
        "/"
    FILES
        ${qml_resource_files}
)

install(TARGETS ioqml
    BUNDLE DESTINATION .
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

# Consider using qt_generate_deploy_app_script() for app deployment if
# the project can use Qt 6.3. In that case rerun qmake2cmake with
# --min-qt-version=6.3.

